application.css
@import url(https://fonts.googleapis.com/css?family=Press+Start+2P);

html{
  background: linear-gradient(#242834, black);
  height: 100%;
}

.instructions{
  width: 125px;
  font-family: 'Press Start 2P';
  margin-top: 15px;
  color: whitesmoke;
  font-size: 10.5px;
  margin-left: 10px;
  margin-bottom: -3px;
}

.score{
  font-family: 'Press Start 2P';
  font-size: 10.5px;
  color: whitesmoke;
  margin-left: 10px;
  display: flex;
}

.score-exact{
  margin-top: 15px;
}

.instructions p{
  margin-top: 25px;
}

.game-title{
  position: absolute;
  top: -20px;
  font-size: 50px;
  font-family: 'Press Start 2P', cursive;
  color: whitesmoke;
}

.game-console{
  height: 590px;
  width: 400px;
  border: 1px solid #242834;
  box-sizing: content-box;
  border-radius: 5px 5px 50px 50px;
  box-shadow: 15px 15px rgba(36, 40, 52, 0.7);
  background-color: #421a88;
}

.rows{
  display: flex;
}
.game{
  display: flex;
  justify-content: center;
  margin-top: 30px;
}

.left-row{
  margin-top: 40px;
  margin-left: 20px;
}

.right-row{
  box-sizing: border-box;
  margin-top: 40px;
  display:flex;
  flex-direction: column;
  justify-content: space-between;
}

.my-information{
  width: 400px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  font-family: 'Press Start 2P', cursive;
  margin-left: 22px;
  font-size: 12px;
  padding-top: 10px;
  color: whitesmoke;
}

.my-information p{
  -webkit-margin-before: 0;
  -webkit-margin-after: 0;
  margin-top: 5px;
}

.my-information a {
  color: whitesmoke;
  font-size: 10px;
  text-decoration: none;
  font-family: 'Press Start 2P', cursive;
}

.fa{
  font-size: 20px;
  padding-top: 3px;
  padding-right: 6px;
}

canvas{
  /*height: 100%;*/
}

#game-canvas{
  display: block;
  position: absolute;
  border: 1px solid #242834;
  background-color: #1e222e;
}

#background-canvas{
  z-index: 1;
  position: relative;
}

#score-level-canvas{
}

.portfolio-links{
  margin-right: 5px;
  margin-top: 2px;
}

